// <auto-generated />
using System;
using CloudSalesSystem.Infrastructure;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace CloudSalesSystem.Infrastructure.Migrations
{
    [DbContext(typeof(CloudSalesSystemDbContext))]
    partial class CloudSalesSystemDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "7.0.5")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("CloudSalesSystem.Domain.Accounts.Account", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset>("CreatedOn")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_on");

                    b.Property<Guid>("CustomerId")
                        .HasColumnType("uuid")
                        .HasColumnName("customer_id");

                    b.Property<string>("Description")
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)")
                        .HasColumnName("description");

                    b.Property<bool>("IsDeleted")
                        .HasColumnType("boolean")
                        .HasColumnName("is_deleted");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("name");

                    b.Property<DateTimeOffset>("UpdatedOn")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_on");

                    b.HasKey("Id")
                        .HasName("pk_accounts");

                    b.HasIndex("CustomerId")
                        .HasDatabaseName("ix_accounts_customer_id");

                    b.ToTable("accounts", (string)null);

                    b.HasData(
                        new
                        {
                            Id = new Guid("e0000b5b-7ad0-4b27-8457-47262fdcf1c7"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            CustomerId = new Guid("697eefc8-cb19-41b0-8302-e91fca1805bf"),
                            Description = "Account_Description_1",
                            IsDeleted = false,
                            Name = "Account_Name_1",
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0))
                        },
                        new
                        {
                            Id = new Guid("e1000b5b-7ad0-4b27-8457-47262fdcf1c7"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            CustomerId = new Guid("697eefc8-cb19-41b0-8302-e91fca1805bf"),
                            Description = "Account_Description_2",
                            IsDeleted = false,
                            Name = "Account_Name_2",
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0))
                        },
                        new
                        {
                            Id = new Guid("e2000b5b-7ad0-4b27-8457-47262fdcf1c7"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            CustomerId = new Guid("697eefc8-cb19-41b0-8302-e91fca1805bf"),
                            Description = "Account_Description_3",
                            IsDeleted = false,
                            Name = "Account_Name_3",
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0))
                        });
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.CustomerSubscriptions.CustomerSubscription", b =>
                {
                    b.Property<Guid>("CustomerId")
                        .HasColumnType("uuid")
                        .HasColumnName("customer_id");

                    b.Property<Guid>("SubscriptionId")
                        .HasColumnType("uuid")
                        .HasColumnName("subscription_id");

                    b.HasKey("CustomerId", "SubscriptionId")
                        .HasName("pk_customer_subscriptions");

                    b.HasIndex("SubscriptionId")
                        .HasDatabaseName("ix_customer_subscriptions_subscription_id");

                    b.ToTable("customer_subscriptions", (string)null);

                    b.HasData(
                        new
                        {
                            CustomerId = new Guid("697eefc8-cb19-41b0-8302-e91fca1805bf"),
                            SubscriptionId = new Guid("74e083d4-13ae-4afc-8040-62d226357c56")
                        });
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.Customers.Customer", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset>("CreatedOn")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_on");

                    b.Property<string>("Description")
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)")
                        .HasColumnName("description");

                    b.Property<bool>("IsDeleted")
                        .HasColumnType("boolean")
                        .HasColumnName("is_deleted");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("name");

                    b.Property<DateTimeOffset>("UpdatedOn")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_on");

                    b.HasKey("Id")
                        .HasName("pk_customers");

                    b.ToTable("customers", (string)null);

                    b.HasData(
                        new
                        {
                            Id = new Guid("697eefc8-cb19-41b0-8302-e91fca1805bf"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            Description = "Customer_Description_1",
                            IsDeleted = false,
                            Name = "Customer_Name_1",
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0))
                        });
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.Licenses.License", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid?>("AccountId")
                        .HasColumnType("uuid")
                        .HasColumnName("account_id");

                    b.Property<DateTimeOffset>("CreatedOn")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_on");

                    b.Property<bool>("IsDeleted")
                        .HasColumnType("boolean")
                        .HasColumnName("is_deleted");

                    b.Property<string>("Key")
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("key");

                    b.Property<Guid>("SubscriptionItemId")
                        .HasColumnType("uuid")
                        .HasColumnName("subscription_item_id");

                    b.Property<DateTimeOffset>("UpdatedOn")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_on");

                    b.HasKey("Id")
                        .HasName("pk_licenses");

                    b.HasIndex("AccountId")
                        .HasDatabaseName("ix_licenses_account_id");

                    b.HasIndex("SubscriptionItemId")
                        .HasDatabaseName("ix_licenses_subscription_item_id");

                    b.ToTable("licenses", (string)null);

                    b.HasData(
                        new
                        {
                            Id = new Guid("446a397f-4d49-4d8c-b775-2ef6df1d9b61"),
                            AccountId = new Guid("e0000b5b-7ad0-4b27-8457-47262fdcf1c7"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IsDeleted = false,
                            Key = "D3694155-870D-41BF-BD38-01742D5CDD53",
                            SubscriptionItemId = new Guid("74e083d4-13ae-4afc-8040-62d226357c56"),
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0))
                        },
                        new
                        {
                            Id = new Guid("f7c7f5dc-47b6-40b7-c760-08db9e382468"),
                            AccountId = new Guid("e0000b5b-7ad0-4b27-8457-47262fdcf1c7"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IsDeleted = false,
                            Key = "D4694155-870D-41BF-BD38-01742D5CDD53",
                            SubscriptionItemId = new Guid("74e083d4-13ae-4afc-8040-62d226357c56"),
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0))
                        },
                        new
                        {
                            Id = new Guid("43a13dd2-b95d-48ea-c763-08db9e382468"),
                            AccountId = new Guid("e1000b5b-7ad0-4b27-8457-47262fdcf1c7"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IsDeleted = false,
                            Key = "D5694155-870D-41BF-BD38-01742D5CDD53",
                            SubscriptionItemId = new Guid("74e083d4-13ae-4afc-8040-62d226357c56"),
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0))
                        });
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.SubscriptionItems.SubscriptionItem", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset>("CreatedOn")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_on");

                    b.Property<bool>("IsDeleted")
                        .HasColumnType("boolean")
                        .HasColumnName("is_deleted");

                    b.Property<Guid>("ProductId")
                        .HasColumnType("uuid")
                        .HasColumnName("product_id");

                    b.Property<string>("ProductName")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("product_name");

                    b.Property<int>("Quantity")
                        .HasColumnType("integer")
                        .HasColumnName("quantity");

                    b.Property<int>("State")
                        .HasColumnType("integer")
                        .HasColumnName("state");

                    b.Property<Guid>("SubscriptionId")
                        .HasColumnType("uuid")
                        .HasColumnName("subscription_id");

                    b.Property<DateTimeOffset>("UpdatedOn")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_on");

                    b.Property<DateOnly>("ValidToDate")
                        .HasColumnType("date")
                        .HasColumnName("valid_to_date");

                    b.HasKey("Id")
                        .HasName("pk_subscription_items");

                    b.HasIndex("SubscriptionId")
                        .HasDatabaseName("ix_subscription_items_subscription_id");

                    b.ToTable("subscription_items", (string)null);

                    b.HasData(
                        new
                        {
                            Id = new Guid("74e083d4-13ae-4afc-8040-62d226357c56"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IsDeleted = false,
                            ProductId = new Guid("e913c473-25a3-49aa-a80e-d62da922ca5e"),
                            ProductName = "Service_1",
                            Quantity = 7,
                            State = 1,
                            SubscriptionId = new Guid("74e083d4-13ae-4afc-8040-62d226357c56"),
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            ValidToDate = new DateOnly(2025, 1, 1)
                        },
                        new
                        {
                            Id = new Guid("75e083d4-13ae-4afc-8040-62d226357c56"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IsDeleted = false,
                            ProductId = new Guid("ea13c473-25a3-49aa-a80e-d62da922ca5e"),
                            ProductName = "Service_2",
                            Quantity = 26,
                            State = 1,
                            SubscriptionId = new Guid("74e083d4-13ae-4afc-8040-62d226357c56"),
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            ValidToDate = new DateOnly(2025, 9, 1)
                        },
                        new
                        {
                            Id = new Guid("76e083d4-13ae-4afc-8040-62d226357c56"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IsDeleted = false,
                            ProductId = new Guid("eb13c473-25a3-49aa-a80e-d62da922ca5e"),
                            ProductName = "Service_3",
                            Quantity = 19,
                            State = 1,
                            SubscriptionId = new Guid("74e083d4-13ae-4afc-8040-62d226357c56"),
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            ValidToDate = new DateOnly(2025, 5, 1)
                        });
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.Subscriptions.Subscription", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset>("CreatedOn")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_on");

                    b.Property<string>("Description")
                        .HasColumnType("text")
                        .HasColumnName("description");

                    b.Property<bool>("IsDeleted")
                        .HasColumnType("boolean")
                        .HasColumnName("is_deleted");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("name");

                    b.Property<DateTimeOffset>("UpdatedOn")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_on");

                    b.HasKey("Id")
                        .HasName("pk_subscriptions");

                    b.ToTable("subscriptions", (string)null);

                    b.HasData(
                        new
                        {
                            Id = new Guid("74e083d4-13ae-4afc-8040-62d226357c56"),
                            CreatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            Description = "Subscription_Description_1",
                            IsDeleted = false,
                            Name = "Subscription_Name_1",
                            UpdatedOn = new DateTimeOffset(new DateTime(1, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0))
                        });
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.Accounts.Account", b =>
                {
                    b.HasOne("CloudSalesSystem.Domain.Customers.Customer", "Customer")
                        .WithMany("Accounts")
                        .HasForeignKey("CustomerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_accounts_customer_customer_id");

                    b.Navigation("Customer");
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.CustomerSubscriptions.CustomerSubscription", b =>
                {
                    b.HasOne("CloudSalesSystem.Domain.Customers.Customer", "Customer")
                        .WithMany("CustomerSubscriptions")
                        .HasForeignKey("CustomerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_customer_subscriptions_customers_customer_id");

                    b.HasOne("CloudSalesSystem.Domain.Subscriptions.Subscription", "Subscription")
                        .WithMany("CustomerSubscriptions")
                        .HasForeignKey("SubscriptionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_customer_subscriptions_subscription_subscription_id");

                    b.Navigation("Customer");

                    b.Navigation("Subscription");
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.Licenses.License", b =>
                {
                    b.HasOne("CloudSalesSystem.Domain.Accounts.Account", "Account")
                        .WithMany("Licenses")
                        .HasForeignKey("AccountId")
                        .HasConstraintName("fk_licenses_accounts_account_id");

                    b.HasOne("CloudSalesSystem.Domain.SubscriptionItems.SubscriptionItem", "SubscriptionItem")
                        .WithMany("Licenses")
                        .HasForeignKey("SubscriptionItemId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_licenses_subscription_item_subscription_item_id");

                    b.Navigation("Account");

                    b.Navigation("SubscriptionItem");
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.SubscriptionItems.SubscriptionItem", b =>
                {
                    b.HasOne("CloudSalesSystem.Domain.Subscriptions.Subscription", "Subscription")
                        .WithMany("SubscriptionItems")
                        .HasForeignKey("SubscriptionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_subscription_items_subscriptions_subscription_id");

                    b.Navigation("Subscription");
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.Accounts.Account", b =>
                {
                    b.Navigation("Licenses");
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.Customers.Customer", b =>
                {
                    b.Navigation("Accounts");

                    b.Navigation("CustomerSubscriptions");
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.SubscriptionItems.SubscriptionItem", b =>
                {
                    b.Navigation("Licenses");
                });

            modelBuilder.Entity("CloudSalesSystem.Domain.Subscriptions.Subscription", b =>
                {
                    b.Navigation("CustomerSubscriptions");

                    b.Navigation("SubscriptionItems");
                });
#pragma warning restore 612, 618
        }
    }
}
